# zenvm

./: .gitignore  BUGS.md  CMakeLists.txt  MODULES.md  Makefile  PLAN.md  PLAN_GFX.md  README.md  bulangbugs.md  syntax.md  test_edge_cases
bench/: invoke_ic.zen  trs_mat4_quat.py  trs_mat4_quat.zen  vtable_inheritance.zen  vtable_many_methods.zen
cli/: CMakeLists.txt  main.cpp
cmake/: SystemRaylib.cmake
docs/: index.md  language-guide.md  quick-reference.md  standard-library.md  syntax-reference.md
examples/: tutorial_01_variaveis.zen  tutorial_02_controlo.zen  tutorial_04_arrays.zen  tutorial_05_structs.zen  tutorial_06_classes.zen  tutorial_07_processos.zen  tutorial_08_modulos.zen  tutorial_10_closures.zen  tutorial_12_buffers.zen  tutorial_13_maps_sets.zen
help/: arrays.txt  classes.txt  functions.txt  index.txt  math.txt  processes.txt  variables.txt
libzen/: CMakeLists.txt
libzen/include/zen/: bytecode.h  common.h  compiler.h  emitter.h  lexer.h  memory.h  module.h  object.h  opcodes.h  value.h  vm.h  zen_arena.h  zen_plugin.h
libzen/src/: builtin_base.cpp  builtin_csv.cpp  builtin_easing.cpp  builtin_file.cpp  builtin_http.cpp  builtin_ini.cpp  builtin_json.cpp  builtin_log.cpp  builtin_math.cpp  builtin_net.cpp  builtin_nn.cpp  builtin_os.cpp  builtin_path.cpp  builtin_regex_lre.cpp  builtin_time.cpp  builtin_utf8.cpp  builtin_xml.cpp  builtin_zip.cpp  bytecode.cpp  compiler.cpp  compiler_expressions.cpp  compiler_statements.cpp  debug.cpp  invoke_array.inl  invoke_buffer.inl  invoke_map.inl  invoke_set.inl  invoke_string.inl  lexer.cpp  memory.cpp  name_tables.h  vm.cpp  vm_dispatch.cpp  zen_arena.cpp
modules/audio/: CMakeLists.txt
modules/audio/include/zen/: module_audio.h
modules/audio/src/: bugl_audio.cpp  bugl_audio.hpp  builtin_audio.cpp
modules/canvas/: CMakeLists.txt
modules/canvas/include/zen/: canvas_backend.h
modules/canvas/src/: builtin_canvas.cpp  canvas_draw.h  canvas_gl_backend.h
modules/dnn/: CMakeLists.txt
modules/dnn/include/zen/: module_dnn.h
modules/dnn/src/: builtin_nn.cpp
modules/gif/: CMakeLists.txt
modules/gif/src/: builtin_gif.cpp
modules/glfw/: CMakeLists.txt
modules/glfw/include/zen/: module_glfw.h
modules/glfw/src/: builtin_glfw.cpp  rglfw.c
modules/opengl/: CMakeLists.txt
modules/opengl/include/zen/: module_gl.h
modules/opengl/src/: gl4_constants.inl  gl_constants.inl  gl_funcs_buffers.inl  gl_funcs_core.inl  gl_funcs_desktop.inl  gl_funcs_draw.inl  gl_funcs_framebuffers.inl  gl_funcs_shaders.inl  gl_funcs_sync.inl  gl_funcs_textures.inl  gl_headers.h  gll_constants.inl  opengl_loader_windows.cpp  zen_gl.cpp  zen_gl4.cpp  zen_gl_legacy.cpp
modules/raylib/: CMakeLists.txt
modules/raylib/include/zen/: module_raylib.h
modules/raylib/src/: builtin_raylib.cpp
modules/sdl2/: CMakeLists.txt
modules/sdl2/include/zen/: module_sdl2.h
modules/sdl2/src/: builtin_sdl2.cpp  sdl_constants.inl  sdl_funcs_events.inl  sdl_funcs_gl.inl  sdl_funcs_renderer.inl  sdl_funcs_timer.inl  sdl_funcs_window.inl
modules/sqlite/: CMakeLists.txt
modules/sqlite/include/zen/: module_sqlite.h
modules/sqlite/src/: builtin_sqlite.cpp
modules/stb_image/: CMakeLists.txt
modules/stb_image/include/zen/: module_image.h
modules/stb_image/src/: builtin_image.cpp
modules/stb_perlin/: CMakeLists.txt
modules/stb_perlin/include/zen/: module_noise.h
modules/stb_perlin/src/: builtin_noise.cpp
modules/stb_rectpack/: CMakeLists.txt
modules/stb_rectpack/include/zen/: module_rectpack.h
modules/stb_rectpack/src/: builtin_rectpack.cpp
modules/stb_trutype/: CMakeLists.txt
modules/stb_trutype/include/zen/: module_font.h
modules/stb_trutype/src/: builtin_font.cpp
notes/: libzen-known-issues.md
runner/: CMakeLists.txt  main.cpp
runner_gl/: CMakeLists.txt  main.cpp
scripts/: enemy.zen  fake_engine.zen  main.zen  mini_engine.zen  struct_test.zen  tutorial_01_variaveis.znb  tutorial_02_controlo.znb  tutorial_03_funcoes.zen  tutorial_07_processos.znb  tutorial_09_snake.zen  tutorial_11_fibers.zen  tutorial_14_metodos.zen  tutorial_15_math_bitwise.zen  tutorial_15_math_bitwise.znb
src/: builtin_base.cpp  builtin_base64.cpp  builtin_crypto.cpp  builtin_fs.cpp  builtin_http.cpp  builtin_os.cpp  builtin_regex.cpp  builtin_regex_lre.cpp  common.h  compiler.cpp  compiler.h  compiler_statements.cpp  (+23 more)
study/div_cpp_modern/: CMakeLists.txt  Makefile  builtins.cpp  builtins.hpp  div_modern  main.cpp  opcodes.hpp  process.hpp  value.hpp  vm.cpp  vm.hpp
study/libbu/: BULANG_SYNTAX_REFERENCE.md  CMakeLists.txt  embed_stdlib.cmake  stdlib.bu
study/libbu/include/: RuntimeDebugger.hpp  arena.hpp  bytecode_format.hpp  code.hpp  compiler.hpp  config.hpp  debug.hpp  interpreter.hpp  lexer.hpp  opcode.hpp  ordermap.hpp  platform.hpp  plugin.hpp  pool.hpp  set.hpp  stdlib_embedded.h  string.hpp  token.hpp  types.hpp  value.hpp  vector.hpp  version.h
study/libbu/src/: Outputcapture.h  RuntimeDebugger.cpp  builtins_array.cpp  builtins_base.cpp  builtins_crypto.cpp  builtins_file.cpp  builtins_fs.cpp  builtins_json.cpp  builtins_math.cpp  builtins_net.cpp  builtins_nn.cpp  builtins_os.cpp  builtins_path.cpp  builtins_regex.cpp  builtins_time.cpp  builtins_zip.cpp  bytecode_loader.cpp  bytecode_writer.cpp  code.cpp  compiler.cpp  compiler_expressions.cpp  compiler_statements.cpp  debug.cpp  function.cpp  gc.cpp  interpreter.cpp  interpreter_process.cpp  interpreter_runtime_goto.cpp  interpreter_runtime_switch.cpp  interpreter_stack.cpp  lexer.cpp  module.cpp  platform.cpp  plugin.cpp  pool.cpp  token.cpp  utf8_utils.h  utils.cpp  utils.hpp  value.cpp
test_functions/: CMakeLists.txt  main.cpp  native_calls.zen  player.zen  struct_native_binding.zen  test_collections.cpp  test_struct.cpp
test_gfx/: CMakeLists.txt  gfx_engine.h  graph.cpp  graph.h  main.cpp  quadtree.cpp  quadtree.h
test_render/: CMakeLists.txt  loop_main.cpp  main.cpp
test_visual/: CMakeLists.txt  bunnymark.zen  main.cpp  test_advance.zen  test_args.zen  test_father_son.zen  test_process.zen  test_signal.zen
tests/test_class_api/: CMakeLists.txt  main.cpp
(+249 files in other folders)
