cmake_minimum_required(VERSION 3.10)
project(zen_cli LANGUAGES CXX)

set(ZEN_BIN_DIR ${CMAKE_SOURCE_DIR}/bin)

add_executable(zen main.cpp)
set_target_properties(zen PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${ZEN_BIN_DIR})
target_compile_options(zen PRIVATE $<$<CONFIG:Release>:-O3>)
target_compile_definitions(zen PRIVATE $<$<CONFIG:Release>:NDEBUG>)
target_link_libraries(zen zen_static)
if(TARGET zen_module_stb_image)
    target_link_libraries(zen zen_module_stb_image)
endif()
if(TARGET zen_module_glfw)
    target_link_libraries(zen zen_module_glfw)
endif()
if(TARGET zen_module_sdl2)
    target_link_libraries(zen zen_module_sdl2)
endif()
if(NOT WIN32)
    target_link_options(zen PRIVATE -rdynamic)
endif()

# Debug trace build
add_executable(zen_debug main.cpp)
set_target_properties(zen_debug PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${ZEN_BIN_DIR})
target_link_libraries(zen_debug zen_static)
if(TARGET zen_module_stb_image)
    target_link_libraries(zen_debug zen_module_stb_image)
endif()
if(TARGET zen_module_glfw)
    target_link_libraries(zen_debug zen_module_glfw)
endif()
if(TARGET zen_module_sdl2)
    target_link_libraries(zen_debug zen_module_sdl2)
endif()
target_compile_definitions(zen_debug PRIVATE ZEN_DEBUG_TRACE_EXEC)
if(NOT WIN32)
    target_link_options(zen_debug PRIVATE -rdynamic)
endif()
